fix(header): adding height to align the text with the logo

--- a/scss/_o-navbar.scss
+++ b/scss/_o-navbar.scss
@@ -271,6 +271,7 @@
 }
 
 .navbar-title {
+  height: 2.6rem;
   margin-top: auto;
   font-size: 2.35rem;
   color: #fff;
